tests/src/errors/exclamationEquals.ts
export {};
let a = 1;
let b = 2;
if (a != b) {
}
